--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Speak Up Africa - Report Bullying</title>
+  <!-- css file -->
+  <link rel="stylesheet" href="style.css">
+
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -14,7 +17,7 @@
 
   <!-- Preloader GIF -->
   <div id="preloader">
-    <img class="preload-gif" src="Gif Bully.gif" alt="Loading...">
+    <img class="preload-gif" src="gif-bully.gif" alt="Loading...">
   </div>
 
   <!-- Main Page Content -->
@@ -38,5 +41,7 @@
     </form>
     <div class="message" id="thankYouMessage">Thank you! Your report has been submitted anonymously.</div>
   </div>
+<!-- javascript file -->
+  <script src="script.js"></script>
 </body>
 </html>
